# PIXETTE

./: .gitignore  LICENSE  PIXETTE_FINAL.stl  README.md  main.py  pixette.py  pyproject.toml  raspberry_pi_headless.md  requirements-dev.txt  requirements.txt
lcd/: __init__.py  colors.py  event_manager.py  screens.py  window.py
pixette/: __init__.py  __main__.py  application.py  config.py  constants.py  device.py  functions.py  scene.py  utils.py
pixette/scenes/: admin.py  base.py  clock.py  currencies.py  settings.py  spotify.py  weather.py
server/: app.py  settings.py
