[tool.poetry]
name = "PIXETTE"
version = "0.2.0"
description = "Time/weather/currency display using a Raspberry Pi Zero with Waveshare LCD HAT"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
gpiozero = "^1.6.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
